--- a/res/layout/fragment_movies_details.xml
+++ b/res/layout/fragment_movies_details.xml
@@ -2,49 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="@dimen/space_std" >
 
     <TextView
         android:id="@+id/fragment_movies_details_title"
+        style="@style/movie_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+        android:layout_marginBottom="@dimen/space_std" />
 
     <ImageView
         android:id="@+id/fragment_movies_details_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:contentDescription="@string/movie_img" />
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@string/movie_img"
+        android:layout_marginBottom="@dimen/space_std" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/fragment_movies_details_director"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="5dp"
-            android:text="@string/by"
-            android:textSize="10dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/fragment_movies_details_director"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="10dp" />
-    </LinearLayout>
+        android:layout_marginBottom="@dimen/space_std" />
 
     <TextView
         android:id="@+id/fragment_movies_details_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12dp" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
