--- a/res/menu/movies_list_single_selection.xml
+++ b/res/menu/movies_list_single_selection.xml
@@ -3,10 +3,13 @@
     <item
         android:id="@+id/cab_action_add"
         android:title="@string/action_add"
-        android:icon="@android:drawable/ic_menu_add"
-        android:orderInCategory="0" />
+        android:icon="@android:drawable/ic_menu_add" />
     <item
         android:id="@+id/cab_action_delete"
         android:title="@string/action_delete"
         android:icon="@android:drawable/ic_menu_delete" />
+    <item
+        android:id="@+id/cab_action_edit"
+        android:title="@string/action_edit"
+        android:icon="@android:drawable/ic_menu_edit" />
 </menu>
