--- a/res/layout/fragment_movies_edit.xml
+++ b/res/layout/fragment_movies_edit.xml
@@ -1,129 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:padding="@dimen/space_std" >
+
+    <TextView
+        android:id="@+id/edit_title_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/title" />
+
+    <EditText
+        android:id="@+id/edit_title_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint=""
+        android:layout_below="@+id/edit_title_view" >
+    </EditText>
+
+    <TextView
+        android:id="@+id/edit_director_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_std"
+        android:layout_below="@+id/edit_title_edit"
+        android:text="@string/director" />
+
+    <EditText
+        android:id="@+id/edit_director_edit"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/edit_director_view"
+        android:inputType="text"
+        android:hint=""
+        android:layout_height="wrap_content" >
+    </EditText>
+
+    <TextView
+        android:id="@+id/edit_url_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_std"
+        android:layout_below="@+id/edit_director_edit"
+        android:text="@string/url" />
+
+    <EditText
+        android:id="@+id/edit_url_edit"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/edit_url_view"
+        android:inputType="textUri"
+        android:hint=""
+        android:layout_height="wrap_content" >
+    </EditText>
+
+    <TextView
+        android:id="@+id/edit_description_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_std"
+        android:layout_below="@+id/edit_url_edit"
+        android:text="@string/description" />
+
+    <EditText
+        android:id="@+id/edit_description_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint=""
+        android:layout_below="@+id/edit_description_view"
+        android:lines="3" >
+    </EditText>
 
     <LinearLayout
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/edit_title_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="3dp"
-                android:text="@string/title" />
-
-            <EditText
-                android:id="@+id/edit_title_edit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:padding="3dp" >
-            </EditText>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/edit_director_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="3dp"
-                android:text="@string/director" />
-
-            <EditText
-                android:id="@+id/edit_director_edit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:padding="3dp" >
-            </EditText>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/edit_url_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="3dp"
-                android:text="@string/url" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical" >
-            </LinearLayout>
-
-            <EditText
-                android:id="@+id/edit_url_edit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:padding="3dp" >
-            </EditText>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/edit_description_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="3dp"
-                android:text="@string/description" />
-
-            <EditText
-                android:id="@+id/edit_description_edit"
-                android:layout_width="0dp"
-                android:layout_height="82dp"
-                android:layout_weight="3"
-                android:ems="10"
-                android:inputType="textMultiLine"
-                android:padding="3dp" >
-
-            </EditText>
-        </LinearLayout>
+        <Button
+            android:id="@+id/edit_cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@android:string/cancel" />
+         <Button
+            android:id="@+id/edit_ok"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@android:string/ok" />
     </LinearLayout>
 
-    <LinearLayout 
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:orientation="horizontal" 
-        >
-
-    <Button
-        android:id="@+id/edit_ok"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@android:string/ok"
-        android:layout_weight="1" />
-
-    <Button
-        android:id="@+id/edit_cancel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@android:string/cancel" 
-        android:layout_weight="1"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
